Fix logo image so it wont disapear on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,3 +83,18 @@ body {
  #footer a:hover {
     text-transform: uppercase;
  }
+
+ /* Media */
+
+@media (max-width: 520px) {
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .nav-links {
+        flex-direction: column;
+        gap: 10px;
+        margin-top: 10px;
+    }
+}
